--- a/src/assets/css/fonts/fonts.css
+++ b/src/assets/css/fonts/fonts.css
@@ -1,13 +1,17 @@
 @import url('https://fonts.googleapis.com/css2?family=Shadows+Into+Light&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&display=swap');
 html {
-    font-family: "Caveat", cursive;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    color: rgb(46, 75, 86);
 }
 
 .pencil {
-    font-family: "Shadows Into Light", cursive;
+    /* font-family: "Shadows Into Light", cursive; */
+
+    font-family: "Caveat", cursive;
 }
 
 .caveat {
     font-family: "Shadows Into Light", cursive;
 }
+
