--- a/src/assets/css/base/base.css
+++ b/src/assets/css/base/base.css
@@ -2,10 +2,15 @@
 *::before,
 *::after {
   box-sizing: border-box;
+  padding: 0;
   margin: 0;
   font-weight: normal;
 }
 
 a {
     text-decoration: none;
+}
+
+li {
+    list-style-type: none;
 }
