dibnamic view height

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -6,6 +6,8 @@
 @import './colors/colors.css';
 
 body {
+    height: 100svh;
+    height: 100dvh;
     height: 100vh;
     padding: 10px;
     overflow: scroll;
